==> tsimon57/USI-compat-SPI-for-ATTiny/SPI.cpp <==
/*
 * Copyright (c) 2010 by Cristian Maglie <c.maglie@bug.st>
 * SPI Master library for arduino.
 *
 * This file is free software; you can redistribute it and/or modify
 * it under the terms of either the GNU General Public License version 2
 * or the GNU Lesser General Public License version 2.1, both as
 * published by the Free Software Foundation.
 */

#include "pins_arduino.h"
#include "SPI.h"

SPIClass SPI;

void SPIClass::begin() {
#ifndef __AVR_ATtiny85__
  // Set SS to high so a connected chip will be "deselected" by default
  digitalWrite(SS, HIGH);

  // When the SS pin is set as OUTPUT, it can be used as
  // a general purpose output port (it doesn't influence
  // SPI operations).
  pinMode(SS, OUTPUT);

  // Warning: if the SS pin ever becomes a LOW INPUT then SPI
  // automatically switches to Slave, so the data direction of
  // the SS pin MUST be kept as OUTPUT.
  SPCR |= _BV(MSTR);
  SPCR |= _BV(SPE);

  // Set direction register for SCK and MOSI pin.
  // MISO pin automatically overrides to INPUT.
  // By doing this AFTER enabling SPI, we avoid accidentally
  // clocking in a single bit since the lines go directly
  // from "input" to SPI control.  
  // http://code.google.com/p/arduino/issues/detail?id=888
  pinMode(SCK, OUTPUT);
  pinMode(MOSI, OUTPUT);
#else
  DDRB |= _BV(PB4); // as output (latch)
  DDRB |= _BV(PB1); // as output (DO) - data out
  DDRB |= _BV(PB2); // as output (USISCK) - clock
  DDRB &= ~_BV(PB5); // as input (DI) - data in
  PORTB |= _BV(PB5); // pullup on (DI)
#endif
}


void SPIClass::end() {
#ifndef __AVR_ATtiny85__
  SPCR &= ~_BV(SPE);
  #endif
}

void SPIClass::setBitOrder(uint8_t bitOrder)
{
#ifndef __AVR_ATtiny85__
  if(bitOrder == LSBFIRST) {
    SPCR |= _BV(DORD);
  } else {
    SPCR &= ~(_BV(DORD));
  }
  #endif
}

void SPIClass::setDataMode(uint8_t mode)
{
#ifndef __AVR_ATtiny85__
  SPCR = (SPCR & ~SPI_MODE_MASK) | mode;
  #endif
}

void SPIClass::setClockDivider(uint8_t rate)
{
#ifndef __AVR_ATtiny85__
  SPCR = (SPCR & ~SPI_CLOCK_MASK) | (rate & SPI_CLOCK_MASK);
  SPSR = (SPSR & ~SPI_2XCLOCK_MASK) | ((rate >> 2) & SPI_2XCLOCK_MASK);
  #endif
}
